# vbo-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  SECURITY.md  deny.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: vbo_pipeline.rs
docs/: VBO_FORMAT.md
fuzz/: Cargo.toml
fuzz/corpus/parser/: basic_vbo
fuzz/fuzz_targets/: parser.rs
scripts/: setup-hooks.sh
src/: analysis.rs  export.rs  lib.rs  parser.rs  telemetry.rs  types.rs
tests/: analysis.rs  export.rs  fast_float.rs  integration.rs  streaming.rs
tests/fixtures/: basic.vbo  continuous_minutes.vbo
