[package]
name = "racelogic-vbo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Fast, resilient parser and telemetry toolkit for Racelogic VBOX .vbo logs"
license = "MIT"
repository = "https://github.com/RephlexZero/vbo-rs"
keywords = ["racelogic", "vbox", "vbo", "telemetry", "motorsport"]
categories = ["parser-implementations", "science", "aerospace"]
readme = "README.md"
include = ["src/**", "tests/**", "benches/**", "docs/**", "README.md", "PLAN.md", "LICENSE-MIT", "CHANGELOG.md"]

[features]
default = ["csv", "gpx", "serde"]
# Serialise VBO metadata and samples. Deserialising a Vbo is deliberately unsupported: callers
# must use Parser so its table invariants and resource limits are always enforced.
serde = ["dep:serde"]
csv = ["dep:csv"]
gpx = []
# Apache Parquet is opt-in because its implementation is intentionally dependency-heavy.
parquet = ["dep:parquet"]
all-formats = ["csv", "gpx", "parquet", "serde"]

[dependencies]
memchr = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
csv = { version = "1.3", optional = true }
parquet = { version = "53.3.0", default-features = false, optional = true }

[dev-dependencies]
bytes = "1.0"
criterion = "0.5"
proptest = "1.5"
serde_json = "1.0"

[[bench]]
name = "vbo_pipeline"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
